--- a/src/pug/components/_faq.pug
+++ b/src/pug/components/_faq.pug
@@ -1,12 +1,12 @@
 // faq
-section.faq-index.-padMdTopBottom
+section.faq-index.-padCoolTopBottom
  .m-faq.-ContainerUniversal
   div(class="m-faq__question tab-pane fade show active", id="pills-home", role="tabpanel", aria-labelledby="pills-home-tab")
    .faq-index__title
     .faq-index__title--text
      h2 Cómo operamos en Monlogo
    section.faq
-    h4.text-sm-left.text-center
+    h4
      | Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respuesta, si su pregunta no está en las que están abajo, le invitamos a contactarnos
     .-padSmTopBottom
      ul(id="faq-list", class="wow faq-list fadeInUp", style="visibility: visible; animation-name: fadeInUp;")
@@ -42,7 +42,6 @@ section.faq-index.-padMdTopBottom
          |La marca comercial es el signo con que 
          |se identifica a un producto o servicio 
          |en el mercado.
-     a(href=linksUrl[1], class="d-flex justify-content-end") ver más >
   .m-faq__img.img-re
    .img-rect
     img(src=linksUrl[1]+"assets/img/astro/astro_faq_rev1.png", alt="")
