--- a/src/pug/components/identidad_corporativa/_explain.pug
+++ b/src/pug/components/identidad_corporativa/_explain.pug
@@ -1,4 +1,12 @@
-section.o-problemStory.-padCoolTopBottom
+section.o-problemStory.-padMdTopBottom
+ .o-problem__text.-padMdBottom.-ContainerUniversal
+  .m-problemOnly__title
+   h2 El pago del servicio se hace en su totalidad
+  .m-problemOnly__text
+   p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ab fugiat quibusdam unde velit ducimus possimus dolorum quae cupiditate ea est voluptate assumenda provident sed, doloribus laborum illo eius deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, eum nesciunt repellendus laborum hic placeat dolorum iste voluptas commodi eaque esse aliquid ducimus quos molestiae dolores incidunt, eius exercitationem accusantium.
+   p El pago del servicio se hace en su totalidad en el momento de la contratación a través de transferencias via Zelle, envíos de dinero por PayPal o Airtm.
+   p Todo contacto y comunicación con el cliente será vía correo electrónico y por Whatsapp.
+    | El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
 
  .o-problemStory__contentLeft.-padBgBottom.-ContainerUniversal
   .m-explainImg
@@ -11,7 +19,7 @@ section.o-problemStory.-padCoolTopBottom
     p Mauris efficitur, mauris at lobortis placerat, dui neque porta justo, at ultrices sem eros at nisl. Proin id ex mi. Morbi lorem nibh, viverra eu aliquam vel, viverra nec libero.
     p By default, the cross axis is vertical. This means the flexbox items will be aligned vertically at the bottom.
 
- .o-problemStory__contentRight.-ContainerUniversal
+ .o-problemStory__contentRight.-padMdBottom.-ContainerUniversal
   .m-problemImg
   .m-problemContent
    h2.a-problemTitle Vestibulum a ultricies tellus
