--- a/src/pug/components/identidad_corporativa/_packege.pug
+++ b/src/pug/components/identidad_corporativa/_packege.pug
@@ -1,92 +1,31 @@
-//- section.fase
- .container-fluid
-  .categories__s
-   .row
-    .col-lg-5.col-12.categories__text
-     p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates iste laudantium corrupti recusandae excepturi. Mollitia assumenda, cumque, alias ut nihil deserunt ipsa molestiae placeat aliquam debitis repellat repudiandae error nesciunt?
-     p
-      span hola
-      |El pago del servicio se hace en su totalidad en el momento de la contratación a través de transferencias via Zelle, envíos de dinero por PayPal o Airtm.
-     p
-      span H 
-      | Todo contacto y comunicación con el cliente será vía correo electrónico y por Whatsapp.
-      br
-      | * El precio del servicio de propuesta o revisión de diseño adicional es 20 $ USD
-    .categories__box.col-lg-7.col-12
-     .categories__box-1
-      span
-      h2 Pack Basico
-      h5 desde usd$ 75
-      p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
-      p
-       span hola
-       | Un (1) logo a partir de dos (2) propuestas*
-      p
-       span hola
-       | Un (1) ícono para perfil de redes sociales
-      p
-       span hola
-       | Un (1) manual de identidad visual de la marca en formato .pdf
-      p
-       span hola
-       | Tres (3) revisiones por diseño*
-      p
-       span hola
-       | Tiempo aproximado de la realización del trabajo Veinte (20) días
-     .categories__box-2
-      span
-      h2 Pack Basico
-      h5 desde usd$ 75
-      p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
-      p
-       span hola
-       | Un (1) logo a partir de dos (2) propuestas*
-      p
-       span hola
-       | Un (1) ícono para perfil de redes sociales
-      p
-       span hola
-       | Un (1) manual de identidad visual de la marca en formato .pdf
-      p
-       span hola
-       | Un (1) diseño de tarjeta de presentación a partir de dos (2) propuestas
-      p
-       span hola
-       | Un (1) diseño de background que podrá usarse para fondo de artes publicitarios y/o papelería
-      p
-       span hola
-       | Tres (3) revisiones por diseño*
-      p
-       span hola
-       | Tiempo aproximado de la realización del trabajo Veinte (30) días
-
-
 section.o-packs.-padBgBottom
- .m-packs.-ContainerBlog
-  .categories__box-1
-   span
-   h2 Pack Basico
-   h3 desde usd$ 75
-   p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
-   .m-donateContent__help.-counterContainer
-    ol.m-listContent.-counter
-     li.a-donateItem Un (1) logo a partir de dos (2) propuestas*
-     li.a-donateItem Un (1) ícono para perfil de redes sociales
-     li.a-donateItem Un (1) manual de identidad visual de la marca en formato .pdf
-     li.a-donateItem Tres (3) revisiones por diseño*
-     li.a-donateItem Tiempo aproximado de la realización del trabajo Veinte (20) días
+ .m-packs.-ContainerMd
+  .m-pack__border
+   .m-pack__box.a-pack
+    .m-pack__details
+     h2 Pack Basico
+     h3 desde usd$ 75
+     p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
+    .m-pack__list
+     ol.m-listContent.-arrowCircle
+      li.a-packItem Un (1) logo a partir de dos (2) propuestas*
+      li.a-packItem Un (1) ícono para perfil de redes sociales
+      li.a-packItem Un (1) manual de identidad visual de la marca en formato .pdf
+      li.a-packItem Tres (3) revisiones por diseño*
+      li.a-packItem Tiempo aproximado de la realización del trabajo Veinte (20) días
 
-  .categories__box-2
-   span
-   h2 Pack Basico
-   h3 desde usd$ 75
-   p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
-   .m-donateContent__help.-counterContainer
-    ol.m-listContent.-counter
-     li.a-donateItem Un (1) logo a partir de dos (2) propuestas*
-     li.a-donateItem Un (1) ícono para perfil de redes sociales
-     li.a-donateItem Un (1) manual de identidad visual de la marca en formato .pdf
-     li.a-donateItem Un (1) diseño de tarjeta de presentación a partir de dos (2) propuestas
-     li.a-donateItem Un (1) diseño de background que podrá usarse para fondo de artes publicitarios y/o papelería
-     li.a-donateItem Tres (3) revisiones por diseño*
-     li.a-donateItem Tiempo aproximado de la realización del trabajo Veinte (30) días
+  .m-pack__border
+   .m-pack__box.a-pack
+    .m-pack__details
+     h2 Pack Basico
+     h3 desde usd$ 75
+     p Lorem ipsum dolor sit amet cons dolor ctetur, adipisicing elit. Alias porro dolcabo sapiente perspiciatis
+    .m-pack__list
+     ol.m-listContent.-arrowCircle
+      li.a-packItem Un (1) logo a partir de dos (2) propuestas*
+      li.a-packItem Un (1) ícono para perfil de redes sociales
+      li.a-packItem Un (1) manual de identidad visual de la marca en formato .pdf
+      li.a-packItem Un (1) diseño de tarjeta de presentación a partir de dos (2) propuestas
+      li.a-packItem Un (1) diseño de background que podrá usarse para fondo de artes publicitarios y/o papelería
+      li.a-packItem Tres (3) revisiones por diseño*
+      li.a-packItem Tiempo aproximado de la realización del trabajo Veinte (30) días
