--- a/src/pug/components/index/categories.pug
+++ b/src/pug/components/index/categories.pug
@@ -1,6 +1,15 @@
-.col-md-4.col-12
- +serviceBox(linksUrl[1]+"servicios/"+linksInternos[0],"01","servicios/005_rev3.png","Identidad Corporativa","design.png","Link your web apps with a few clicks, so they can share data")
-.col-md-4.col-12
- +serviceBox(linksUrl[1]+"servicios/"+linksInternos[1],"02","servicios/004_rev1.png","Diseño user interface","web_ui.png","Link your web apps with a few clicks, so they can share data")
-.col-md-4.col-12
- +serviceBox(linksUrl[1]+"servicios/"+linksInternos[3],"03","servicios/003_rev1.png","Paginas web","web_pagination.png","Link your web apps with a few clicks, so they can share data")
+section.categories.-padMdTopBottom 
+ .container-fluid
+  .row
+   .categories__title
+    .col-12.categories__title--text
+     h2.text--left
+      | Diseñamos identidad corporativa, páginas web, y más!
+     .line__vertical-01
+     h4 Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría
+   .col-md-4.col-12
+    +serviceBox(linksUrl[1]+"servicios/"+linksInternos[0],"01","servicios/005_rev3.png","Identidad Corporativa","design.png","Link your web apps with a few clicks, so they can share data")
+   .col-md-4.col-12
+    +serviceBox(linksUrl[1]+"servicios/"+linksInternos[1],"02","servicios/004_rev1.png","Diseño user interface","web_ui.png","Link your web apps with a few clicks, so they can share data")
+   .col-md-4.col-12
+    +serviceBox(linksUrl[1]+"servicios/"+linksInternos[3],"03","servicios/003_rev1.png","Paginas web","web_pagination.png","Link your web apps with a few clicks, so they can share data")
