--- a/src/pug/lib/variables.pug
+++ b/src/pug/lib/variables.pug
@@ -1,8 +1,8 @@
 -var service = ["Identidad Corporativa", "Diseño User Interface", "Páginas Web"]
--var titles = ["Acerca de", "Servicios", "Identidad Corporativa", "Diseño User Interface", "Páginas Web", "Contactar"]
+-var titles = ["Acerca de", "Servicios", "Identidad Corporativa", "Diseño User Interface", "Páginas Web", "Contactar", "Monlogo"]
 -var linksUrl = ["/", "/dist/"]
 -var linksInternos = ["identidad-corporativa.html", "diseno-ui.html", "acerca-de.html", "pagina-web.html", "mapsite.html"]
 -var linksExternos = ["https://www.instagram.com/monlogoteam", "https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"]
 -var titleOdoo = ["Conceptos y definiciones", "Normativa", "Preguntas Frecuentes"]
 -var logoImg = "assets/img/brand/"
--var logoColor = [logoImg+"imagotipo_w.png", logoImg+"imagotipo_rgb.png", logoImg+"logo_conex@1_5x.png"]
+-var logoColor = [logoImg+"imagotipo_white@0.5x.png", logoImg+"imagotipo_monlogo_color@0.5x.png", logoImg+"isotipo_monlogo_rgb.png"]
