--- a/src/pug/servicios/identidad-corporativa.pug
+++ b/src/pug/servicios/identidad-corporativa.pug
@@ -3,7 +3,7 @@ include ../lib/mixins.pug
 <!DOCTYPE html>
 html(lang="en")
  include ../base/head.pug
-  title #{service[0]}
+  title #{titles[2]} - #{titles[6]}
  body
   // menu
   include ../base/header.pug
@@ -16,7 +16,6 @@ html(lang="en")
 
   // pack service
   include ../components/identidad_corporativa/_packege.pug
-  
   
   //Boxes pills
   include ../components/identidad_corporativa/_boxpills.pug
