--- a/src/sass/base/_links.scss
+++ b/src/sass/base/_links.scss
@@ -1,6 +1,7 @@
 a {
     font-size: $fontSM2;
-    color: $color-darkengrey;
+    color: inherit;
+    // color: $color-darkengrey;
     text-decoration: none;
     &:hover {
         text-decoration: none;
@@ -9,9 +10,9 @@ a {
 
 .a-itemLink {
     font-size: $fontSM2;
-    color: $color-darkengrey;
+    // color: $color-darkengrey;
     &:hover {
-        color: rgba($color-darkengrey, $alpha: .8);
+        opacity: 0.9;
     }
     &:active {
         border-bottom: 1px dotted $color-darkengrey;
@@ -68,6 +69,13 @@ a.-LinkFaq {
     color: $color-primary;
     text-decoration: underline;
     font-weight: 400;
+}
+
+.-linkNormal {
+    color: $color-darkgrey;
+    &:hover {
+        opacity: .8;
+    }
 }
 
 
