--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,91 +1,4 @@
-.bg-monlogo {
-    background-color: transparent;
-    padding-top: 15px;
-    padding-left: 60px;
-    padding-right: 60px;
-    img.iconos__menu {
-        width: 28px;
-    }
-    a.nav-link {
-        font-weight: 600;
-        &:link {
-            color: $color-lightin;
-        }
-        &:visited {
-            color: $color-lightin;
-        }
-        &:active {
-            color: $color-lightin;
-            text-decoration: underline solid $color-lightin;
-        }
-    }
-    .navbar-nav .nav-link:hover {
-        color: $color-lightin;
-    }
-    .navbar-nav .show > .nav-link {
-        color: $color-lightin;
-    }
-    a.btn, a .btn {
-        &.btn-outline-secondary  {
-            color: $color-lightin;
-            border-color: $color-lightin;
-        }
-    }
-}
-.header {
-    position: sticky;
-    z-index: 1000;
-    top: 0;
-}
-
-.bg-light {
-    padding-top: 15px;
-    padding-left: 60px;
-    padding-right: 60px;
-    img.iconos__menu {
-        width: 28px;
-    }
-    a.nav-link {
-        font-weight: 600;
-        &:hover {
-            color: $color-variation;
-        }
-        &:link {
-            color: $color-darkgrey;
-        }
-        &:visited {
-            color: $color-darkgrey;
-        }
-        &:active {
-            text-decoration: underline solid $color-variation;
-        }
-    }
-    .dropdown-menu {
-        background: #f8f9fa;
-        border: none;
-        a:hover {
-            color: $color-variation;
-        }
-        a:link {
-            color: $color-lightgrey;
-        }
-        a:visited {
-            color: $color-grey;
-        }
-        a:active {
-            text-decoration: underline solid $color-variation;
-        }
-    }
-}
-
-.logo.logo__header {
-    img {
-        width: 150px;
-    }
-}
-
 // Menus, y navegación
-
 .o-nav {
     position: relative;
     z-index: 2;
@@ -103,7 +16,7 @@
     transition: height 0.25s ease-in-out 0s;
     // border-bottom: 1px solid $color-primary;
     @include mediaQueriesMd {
-        height: 50px;
+        height: 65px;
     }
 }
 
@@ -114,14 +27,14 @@
     grid-gap: 0 10px;
     grid-template-areas: "brand contentItem buttonCTA";
     padding: 4px 7% 5px;
-    background-color: $color-lightin;
     @include mediaQueriesLg {
         padding: 8px 5% 5px;
+        grid-template-columns: 15% 1fr 15%;
         grid-gap: 0 $spaceXs;
     }
     @include mediaQueriesMd {
         padding: 8px 15px 5px;
-        grid-template-columns: auto 1fr auto;
+        grid-template-columns: 15% 1fr 15%;
         grid-template-areas: "burguer brand buttonCTA";
     }
 }
@@ -139,8 +52,8 @@
         }
     }
     @include mediaQueriesMd {
-        justify-content: center;
-        padding-left: 8px;
+        margin-right: auto;
+        margin-left: auto;
         box-sizing: border-box;
         &__Img {
             width: 150px;
@@ -153,7 +66,6 @@
     display: none;
     margin-left: auto;
     margin-right: auto;
-    padding-right: 10px;
     box-sizing: content-box;
     .a-brandMobile__Img {
         width: 150px;
@@ -164,10 +76,13 @@
 }
 
 .m-itemContent {
+    display: flex;
+    align-items: center;
     &.-isActive {
         top: 0;
         left: 0;
         bottom: 0;
+        z-index: $spaceBg;
     }
     .a-burguerOut {
         display: none;
@@ -183,7 +98,6 @@
         top: -200vh;
         background-color: $color-lightin;
         width: 100vw;
-        display: flex;
         align-items: center;
         justify-content: start;
         flex-direction: column;
@@ -199,6 +113,8 @@
         }
         .a-button .-outlinePrimary {
             display: flex;
+            position: relative;
+            left: -2px;
             // font-size: $fontS3;
             // padding: 8px 60px;
         }
@@ -206,22 +122,23 @@
 }
 
 .m-itemContent__list {
-    padding-left: 15px;
+    padding-left: $spaceXs;
     display: flex;
     flex-direction: row;
     align-items: center;
     list-style: none;
     position: relative;
-    top: 6px;
+    color: $color-lightin;
+    // top: 6px;
     grid-area: contentItem;
     li {
         padding-top: 20px;
-        padding-right: $spaceXs;
+        padding-right: $spaceRg;
     }
     @include mediaQueriesMd {
         padding-left: 0;
         margin-top: $spaceSm;
-        margin-bottom: $spaceMd;
+        margin-bottom: $spaceRg;
         flex-direction: column;
         padding-left: 0;
         justify-content: center;
@@ -232,10 +149,34 @@
     }
 }
 
+.m-itemContent__media {
+    display: flex;
+    margin-left: auto;
+    .a-facebook {
+        content: url('../img/iconos/facebook_white.svg');
+    }
+    .a-instagram {
+        content: url('../img/iconos/instagram_white.svg');
+    }
+    .a-whatsapp {
+        content: url('../img/iconos/whatsapp_white.svg');
+    }
+    .a-facebook, .a-instagram, .a-whatsapp {
+        &:hover {
+            border-bottom: 1px dotted $color-primary;
+        }
+    }
+    @include mediaQueriesMd {
+        display: none;
+    }
+}
+
 .m-CallToAction {
     grid-area: buttonCTA;
     display: flex;
     align-items: center;
+    position: relative;
+    top: 3px;
     .a-iconFund {
         display: none;
     }
@@ -251,6 +192,8 @@
         }
         .a-iconFund {
             display: inline;
+            position: relative;
+            z-index: 1px;
             padding-top: 5px;
             &__img {
                 width: 30px;
