--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,16 +21,15 @@
 // Components
 @import "components/header";
 @import "components/hero";
-//@import "components/carousel";
 @import "components/categories";
 @import "components/problem_story";
 @import "components/text";
-@import "components/us";
+// @import "components/us";
 @import "components/pack";
 @import "components/faq";
-@import "components/modus";
+// @import "components/modus";
 @import "components/contact";
-@import "components/project";
+// @import "components/project";
 @import "components/footer";
 
-@import "components/media";
+// @import "components/media";
