--- a/src/pug/base/head.pug
+++ b/src/pug/base/head.pug
@@ -3,8 +3,20 @@ head
  meta(charset="UTF-8")
  meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
  meta(http-equiv="X-UA-Compatible", content="ie=edge")
+ meta(name="og:type", content="Website")
+ meta(name="og:site_name", content=titles[6])
+ meta(name="og:locale", content="es_ES")
+ meta(name="og:image", content="https://monlogo.com.ve/assets/img/banner/banner@3x.png")
+ //-  meta(name="og:image:secure_url", content="https://monlogo.com.ve/assets/img/banner/banner.png")
+ meta(name="og:url", content="https://monlogo.com.ve/")
+ meta(name="og:description", content="Creamos productos digitales sólido y geniales para hacer despegar tu empresa. Agencia de diseño web (UI), diseño de identidad corporativa y páginas web.")
+ meta(name="keywords", content="Website,Building Website,make a website,logotipo,agencia de diseño,identidad corporativa,logo,tarjeta corporativa,diseño ui,diseño web,página web, páginas web,diseño de interfaz de usuario,hacer un website,programador,diseñador")
+ meta(name="theme-color", content="#315172")
+ // metas de fav
+ link(rel="shortcut icon", href=linksUrl[1]+logoColor[2], type="image/x-icon")
+ link(rel="apple-touch-icon", href=linksUrl[1]+logoColor[2], type="image/png", sizes="180x180")
+ link(rel="icon", href=linksUrl[1]+logoColor[2], type="image/png", sizes="196x196")
+ 
  // Bootstrap CSS
  link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css", integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh", crossorigin="anonymous")
  link(rel="stylesheet", href=linksUrl[1]+"assets/css/style.css")
- // Iconos
- link(rel="stylesheet", href=linksUrl[1]+"assets/fonts/fontawesome/css/all.css")
