--- a/src/pug/components/identidad_corporativa/_hero.pug
+++ b/src/pug/components/identidad_corporativa/_hero.pug
@@ -1,4 +1,4 @@
-section.o-hero.-index
+section.o-hero.-service.-padMdTop
  .m-heroContent.-ContainerUniversal
   .m-heroContent__text
    .a-heroContent__title
