--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, p, small, i, span, ol, li, ul {
+h1, h2, h3, h4, p, small, i, span, ol,  ul {
     font-family: $font2;
     color: $color-primary;
     line-height: 1.3;
@@ -35,7 +35,7 @@ h3 {
     font-weight: 400;
     font-size: $fontS3;
     @include mediaQueriesLg {
-        font-size: $fontSM5;
+        font-size: $fontSM2;
     }
     @include mediaQueries0 {
         font-size: $font01;
@@ -47,18 +47,18 @@ h4 {
     font-weight: 400;
     font-size: $fontSM2;
     @include mediaQueriesLg {
-        font-size: $fontSM5;
+        font-size: $font01;
     }
     @include mediaQueries0 {
         font-size: $font01;
     }
 }
 
-// Pragraph
+// Paragraph
 p, i, ol, li {
     font-size: $fontS2;
     font-weight: normal;
-    color: $color-darkgrey;
+    // color: $color-darkgrey;
     padding-bottom: $spaceXs;
     @include mediaQueriesLg {
         line-height: 1.6;
@@ -67,6 +67,13 @@ p, i, ol, li {
         line-height: 1.4;
         font-size: $fontSM2;
     }
+    @include mediaQueriesXs {
+        font-size: $font01;
+    }
+}
+
+p, i {
+    color: $color-darkgrey;
 }
 
 small, span {
@@ -98,7 +105,7 @@ ol {
             position: absolute;
             left: 0;
             margin: 2px 5px 0;
-            content: url('../img/icons/arrow_right@0.5.svg');
+            content: url('../img/iconos/arrow_right@0.5.svg');
         }
     }
     &.-counter li {
@@ -107,7 +114,6 @@ ol {
         &::before {
             width: 22px;
             height: 22px;
-            // margin: 2px 10px;
             display: block;
             position: absolute;
             left: -5px;
@@ -123,4 +129,27 @@ ol {
             background-color: $color-secondary;
         }
     }
+    &.-arrowCircle li {
+        list-style: none;
+        margin-left: 32px;
+        &::before { 
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 22px;
+            height: 22px;
+            position: absolute;
+            left: 0;
+            content: url('../img/iconos/arrow_right@0.5.svg');
+            border-radius: 50%;
+            font-size: $fontS1;
+            transition: all .2s;
+            background-color: $color-secondary;
+        }
+    }
+}
+
+// Modifier
+.-strong {
+    font-weight: 500;
 }
