--- a/src/sass/components/_faq.scss
+++ b/src/sass/components/_faq.scss
@@ -13,6 +13,20 @@
     grid-template-areas: "faqQuestions faqImg";
     justify-content: center;
     align-items: center;
+    @include mediaQueriesLg {
+        grid-template-columns: 68% 1fr;
+    }
+    @include mediaQueriesMd {
+        grid-template-columns: 89%;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: "faqQuestions" "faqImg";
+        h2 {
+            text-align: center;
+        }
+    }
+    @include mediaQueriesSm {
+        grid-template-columns: 95%;
+    }
 }
 
 .m-faq__question {
@@ -28,6 +42,10 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+
+    h4 {
+        text-align: left;
+    }
 
     .faq-list {
         padding: 0;
@@ -49,7 +67,14 @@
     li::marker {
         visibility: visible;
     }
+    @include mediaQueriesMd {
+        h4 {
+            margin-top: $spaceXs;
+            text-align: center;
+        }
+    }
 }
+
 .img-rect {
     height: 370px;
     display: flex;
@@ -61,17 +86,7 @@
 }
 
 
-@keyframes plusRotate {
-    0% {
-        transform: rotate(-130deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-.fadeInUp {
-    animation-name: fadeInUp;
-}
+
 @keyframes fadeInUp {
     0% {
         opacity: 0;
