--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -1,5 +1,4 @@
 .explanation {
-    height: 800px;
     background: linear-gradient(to top, $color-lightgrey 0%, $color-lightin 100%);
     display: flex;
     align-items: center;
@@ -10,95 +9,234 @@
 
 .box-explanation {
     width: 100%;
-    height: 830px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-image: linear-gradient(to top, $color-variation, $color-primary);
-    /* padding-top: 2rem;
-    padding-bottom: 2rem; */
-    .boxes--fly {
-        max-width: 90%;
-    }
-    .boxes--fly-1 {
-        display: flex;
-        padding-top: 2rem;
-        padding-bottom: 1rem;
-        position: relative;
-        left: -40px;
-    }
-    .boxes__img--fly-1 {
-        @include boxes--img-1;
-        background-color: $color-secondary;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-        margin-right: 20px;
-        margin-left: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img {
-            filter: grayscale(70%)  brightness(80%) contrast(300%);
-        }
-    }
-    .boxes__text--fly-1 {
-        @include boxes--fly-1;
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
-        margin-right: 30px;
-    }
-    .boxes__img--fly-1, .boxes__text--fly-1 {
-        position: relative;
-        left: 8%;
-    }
-    .boxes--fly-2 {
-        display: flex;
-        padding-top: 2rem;
-        padding-bottom: 1rem;
-    }
-    .boxes__img--fly-2 {
-        @include boxes--img-1;
-        background-color: $color-primary;
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
-        margin-left: 20px;
-        margin-right: 80px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img {
-            width: 110%;
-            padding-top: 15%;
-        }
-    }
-    .boxes__text--fly-2 {
-        @include boxes--fly-1;
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-    .boxes__img--fly-2, .boxes__text--fly-2 {
-        position: relative;
-        left: 36%;
-    }
-    .boxes--fly-3 {
-        display: flex;
-        padding-top: 2rem;
-        padding-bottom: 1rem;
-    }
-    .boxes__text--fly-3 {
-        @include boxes--fly-2;
-        margin-left: 50px;
-        margin-right: 80px;
-        display: flex;
-        position: relative;
-        left: 8%;
-        .boxes--text {
-            width: 65%;
-        }
-        img {
-            height: 180%;
-            margin-top: -100px;
-        }
-    }
 
+}
+
+.boxes--fly {
+    max-width: 90%;
+    @include mediaQueriesLg {
+        height: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        h2  {
+            font-size: $fontSM3;
+        }
+    }
+    @include mediaQueriesMd {
+        max-width: 95%;
+        p {
+            font-size: $fontS2;
+        }
+    }
+    @include mediaQueriesSm {
+        max-width: 70%;
+    }
+    @include mediaQueriesXs {
+        max-width: 75%;
+    }
+    @include mediaQueriesXxs {
+        max-width: 85%;
+    }
+}
+.boxes--fly-1 {
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    position: relative;
+    left: -40px;
+    @include mediaQueriesMd {
+        left: 0;
+    }
+    @include mediaQueriesSm {
+        flex-direction: column;
+        position: static;
+    }
+}
+.boxes__img--fly-1 {
+    @include boxes--img-1;
+    background-color: $color-secondary;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-right: 20px;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        filter: grayscale(70%)  brightness(80%) contrast(300%);
+    }
+    @include mediaQueriesMd {
+        margin-left: 0;
+    }
+    @include mediaQueriesSm {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 10px;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 10px;
+    }
+}
+.boxes__text--fly-1 {
+    @include boxes--fly-1;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-right: 30px;
+    @include mediaQueriesMd {
+        margin-right: 0;
+    }
+    @include mediaQueriesSm {
+        width: auto;
+        height: 200px;
+        margin: 0;
+        margin-bottom: 35px;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 10px;
+    }
+}
+.boxes__img--fly-1, .boxes__text--fly-1 {
+    position: relative;
+    left: 8%;
+    @include mediaQueriesXl {
+        left: 10%;
+    }
+    @include mediaQueriesLg {
+        left: 0%;
+    }
+}
+.boxes--fly-2 {
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    @include mediaQueriesSm {
+        flex-direction: column;
+        position: static;
+    }
+}
+.boxes__img--fly-2 {
+    @include boxes--img-1;
+    background-color: $color-primary;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-left: 20px;
+    margin-right: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+        width: 110%;
+        padding-top: 15%;
+    }
+    @include mediaQueriesMd {
+        margin-right: 0;
+    }
+    @include mediaQueriesSm {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 35px;
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 0;
+        img {
+            width: 85%;
+            padding-top: 10%;
+        }
+    }
+    @include mediaQueriesXs {
+        img {
+            width: 95%;
+            margin-left: 5%;
+            padding-top: 10%;
+        }
+    }
+}
+.boxes__text--fly-2 {
+    @include boxes--fly-1;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    @include mediaQueriesSm {
+        width: auto;
+        height: 250px;
+        margin: 0;
+        margin-bottom: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 0;
+    }
+    @include mediaQueriesXs {
+        height: 280px;
+    }
+    @include mediaQueries0 {
+        height: 300px;
+    }
+}
+.boxes__img--fly-2, .boxes__text--fly-2 {
+    position: relative;
+    left: 36%;
+    @include mediaQueriesXl {
+        left: 25%;
+    }
+    @include mediaQueriesLg {
+        left: 10%;
+    }
+    @include mediaQueriesMd {
+        left: 0;
+    }
+}
+.boxes--fly-3 {
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    @include mediaQueriesSm {
+        flex-direction: column;
+        position: static;
+    }
+}
+.boxes__text--fly-3 {
+    @include boxes--fly-2;
+    margin-left: 50px;
+    margin-right: 80px;
+    display: flex;
+    position: relative;
+    left: 8%;
+    .boxes--text {
+        width: 65%;
+    }
+    img {
+        height: 180%;
+        margin-top: -100px;
+    }
+    @include mediaQueriesXl {
+        left: 8%;
+    }
+    @include mediaQueriesLg {
+        left: 0%;
+    }
+    @include mediaQueriesMd {
+        left: 0;
+        margin: 0;
+    }
+    @include mediaQueriesSm {
+        width: 100%;
+        height: 400px;
+        left: 0;
+        margin: 0;
+        flex-direction: column;
+        align-items: center;
+        .boxes--text {
+            width: auto;
+        }
+        img {
+            height: 78%;
+            margin-top: -100px;
+            margin-bottom: 8%;
+        }
+    }
+    @include mediaQueriesXs {
+        img {
+            height: 60%;
+            margin-top: -90px;
+        }
+    }
 }
